SBVTestSuite/TestSuite/CompileTests/SCase/SCase21.stderr
SCase21.hs:11:14: error: [GHC-39584]
    " SCase21.hs:13:16-20: sCase: Non-exhaustive match:
        Type       : Expr
        Constructor: Num i | i .> 4
      NB. Guarded match might fail.

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero           -> 0
               Num i | i .> 4 -> 4
               Var s          -> ite (s .== literal "a") 1 2
               Add a b        -> t e + t b
               Let _   _a  b  -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

